feat: Fully integrated frontend with backend for authentication.